Fixes and Enhancements since Version 0.5 alpha 3

 - Added a 'WSGI' command to the 'peak' script, to allow you to run "foreign"
   (i.e. non-PEAK) PEP 333 applications in PEAK's various servers and
   launchers.  Basically, by prefixing 'WSGI' before the import specifier, you
   can now run such foreign apps.

   For example::

       peak launch WSGI import:some_app.application

   will run 'some_app.application' in the local web browser, and::

       peak CGI WSGI import:some_app.application
   
   will run it under the CGI/FastCGI runner.  Similarly, you can use this in
   the "Command" spec for the "peak supervise" pre-forking FastCGI supervisor
   subsystem.
   
 - There is a new 'running.IWSGIApplication' interface, for PEP 333-compliant
   "application" objects, and all of PEAK's provided applications now implement
   it instead of 'running.IRerunnableCGI'.  If you write your apps to the newer
   interface, they'll be portable to any PEP 333-compliant web server, not just
   the PEAK CGI, FastCGI, and "supervisor" containers.  There is a simple
   adapter that allows 'IWSGIApplication' objects to run in the CGI-based
   containers, but not the other way around, so using 'IRerunnableCGI' directly
   now limits your portability.  (For example, the "peak launch" and "peak
   serve" commands will soon require 'IWSGIApplication', and will not support
   'IRerunnableCGI' any more.)

   Of course, if you use the 'peak.web' framework, you don't need to worry
   about any of this; your apps will automatically be wrapped as
   'IWSGIApplication', and run in any PEAK server or gateway.

 - Most 'peak.web' interfaces have changed significantly.  If you implemented
   anything based on the older interfaces, and it still works, it's sheer
   bloody luck.  In particular, note that every method in 'web.IWebTraversable'
   now has different inputs and/or outputs than before.  Please read the new
   interface docs and update your code!  The changed interfaces offer much